Heading is now red, fixed layout issue for mobile

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,6 @@
   background: #00796B;
   color: white;
 }
-.col-teal-def {
-  color: #009688;
+.col-red-def {
+  color: #F44336;
 }
